--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
-
+#server port = 5432
+#spring.datasource.driverClassName=org.postgresql.Driver
+#spring.datasource.url= jdbc:postgresql://localhost:5432/testdb
+#spring.datasource.username=postgres
+#spring.datasource.password=password
+#spring.datasource.platform=postgresql
+#spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postresql://localhost:5432/student
+spring.datasource.username=
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
