--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,9 @@
 #spring.datasource.platform=postgresql
 #spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postresql://localhost:5432/student
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.url=jdbc:postgresql://localhost:5432/student
+spring.datasource.username=postgres
+spring.datasource.password=***REMOVED***
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
