--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,4 @@
 #server port = 5432
-#spring.datasource.driverClassName=org.postgresql.Driver
-#spring.datasource.url= jdbc:postgresql://localhost:5432/testdb
-#spring.datasource.username=postgres
-#spring.datasource.password=password
-#spring.datasource.platform=postgresql
-#spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/student
 spring.datasource.username=postgres
@@ -13,3 +7,6 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+
+#allows exception messages to be passed back to requests
+server.error.include-message=always
