--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,17 @@
 #server port = 5432
+
+#driver to access our database
 spring.datasource.driverClassName=org.postgresql.Driver
+
+#connection url for our database  with username and password
+#note: if local database you might not need username/password
 spring.datasource.url=jdbc:postgresql://localhost:5432/student
 spring.datasource.username=postgres
 spring.datasource.password=Tomrp5991!
+
+#create schema and before app shuts down, drop everything
 spring.jpa.hibernate.ddl-auto=create-drop
+#see sql statements that Hibernate generates
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
