--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,10 @@
 spring.datasource.driverClassName=org.postgresql.Driver
 
 #connection url for our database  with username and password
-#note: if local database you might not need username/password
+#note: you might need to add username/password
 spring.datasource.url=jdbc:postgresql://localhost:5432/student
-spring.datasource.username=postgres
-spring.datasource.password=Tomrp5991!
+spring.datasource.username=
+spring.datasource.password=
 
 #create schema and before app shuts down, drop everything
 spring.jpa.hibernate.ddl-auto=create-drop
